trying to rename failed rollback the change

--- a/CabBooking.API/appsettings.json
+++ b/CabBooking.API/appsettings.json
@@ -9,6 +9,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "CabBookingDbConnection": "Data Source=(local);Initial Catalog=CabBookingDb;Integrated Security=True"
+    "CabBookingDbConnection": "Data Source=.;Initial Catalog=JasonXing_CabBookingDb;Integrated Security=True"
   }
 }
