--- a/CabBooking.API/appsettings.json
+++ b/CabBooking.API/appsettings.json
@@ -10,5 +10,6 @@
 
   "ConnectionStrings": {
     "CabBookingDbConnection": "Data Source=.;Initial Catalog=JasonXing_CabBookingDb;Integrated Security=True"
-  }
+  },
+  "clientSPAUrl": "http://localhost:4200"
 }
